// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <hr
      class="sc-iktFfs gcLjqy sc-hiSbEG iXlJCC"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <hr
      class="sc-iktFfs fGhlyA sc-hiSbEG iXlJCC"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <hr
      class="sc-iktFfs tXkpF sc-hiSbEG iePNYO"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik kWuhSW sc-hHfuMS jFLXel sc-hiSbEG iXlJCC"
    >
      <hr
        class="sc-iktFfs sc-jJEKmz gcLjqy hwsabM"
        type="dashed"
      />
      <span
        class="sc-fKFxtB eNMjwF sc-iwyWTf jHzKJs"
      >
        some text
      </span>
      <hr
        class="sc-iktFfs sc-jJEKmz gcLjqy hwsabM"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
